<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroCliente">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/angryimg"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/logo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:imeOptions="actionNext"
            android:text="@string/tela"
            android:textSize="25sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtNome"
            android:ems="10"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome"
            android:maxLines="1" />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtEmail"
            android:ems="10"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:maxLines="1" />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtCPF"
            android:ems="10"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/CPF"
            android:maxLines="1" />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtTelefone"
            android:ems="10"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tel"
            android:maxLines="1" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtSenha"
            android:ems="10"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/senha"
            android:maxLines="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCadastrar"
            android:layout_width="match_parent"
            android:imeOptions="actionGo"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_botao"
            android:text="@string/cadastrar" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>